# PersonaLinguaLive

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  errors.py  main.py
app/adapters/: __init__.py  factory.py
app/api/: chat.py  deps.py  health.py  persona.py  vision.py  world.py
app/prompts/: ambient_mumble.py  background_gen.py  chat_summary.py  chat_system.py  judge.py  learner_context.py  (+4 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tests/: conftest.py  test_ambient_mumble_prompt.py  test_ambient_scheduler.py  test_ambient_schema.py  test_ambient_ws.py  test_background_gen_prompt.py  test_chat_endpoint.py  test_chat_orchestrator.py  test_chat_prompt.py  test_chat_summary.py  test_chat_system_world.py  test_config.py  test_context_manager.py  test_context_manager_npc.py  test_cors_and_static.py  test_deepseek_llm_adapter.py  test_errors.py  test_fake_llm_adapter.py  test_fake_stt_adapter.py  test_fake_tts_adapter.py  test_fake_vision_adapter.py  test_health.py  test_imagegen_fake.py  test_imagegen_openai.py  test_judge_prompt.py  test_learner_context_prompt.py  test_living_scene_e2e.py  test_llm_factory.py  test_logger.py  test_minimax_tts_adapter.py  test_openai_llm_adapter.py  test_openai_stt_adapter.py  test_openai_tts_adapter.py  test_openai_vision_adapter.py  test_persona_endpoint.py  test_persona_prompt.py  test_persona_service.py  test_qwen_vision_adapter.py  test_ratelimit.py  test_request_id.py  (+18 more)
(+115 files in other folders)
